--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@ layout: compress
   </head>
 
   <body>
-
+    {% include dark-mode-toggle.html %}
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
